SERVER-22239 DuplicateKey Error, update optime to latest after insert failure